crates/cypher-ast/tests/snapshots/snapshot__expr_literal_integer.snap
---
source: crates/cypher-ast/tests/snapshot.rs
assertion_line: 326
expression: "dump(\"RETURN 42\")"
---
SourceFile(SOURCE_FILE@0..9)
  STATEMENT@0..9
    ReturnClause(RETURN_CLAUSE@0..9)
      RETURN_KW@0..6 "RETURN"
      RETURN_BODY@6..9
        RETURN_ITEMS@6..9
          ReturnItem(RETURN_ITEM@6..9)
            LITERAL_EXPR@6..9
              WHITESPACE@6..7 " "
              INT_LITERAL@7..9 "42"
